--- a/src/components/dialog/index.scss
+++ b/src/components/dialog/index.scss
@@ -1,4 +1,4 @@
-@import "../core/variables";
+@import "../../style/variables";
 .nx-modal-mask {
   position: absolute;
   z-index: $zindex-modal-mask;
