--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -45,7 +45,6 @@
 
         .s-header-text {
             display: inline-block;
-            float: left;
             height: 34px;
             line-height: 34px;
             margin-left: 16px;
@@ -125,75 +124,45 @@
             line-height: 35px;
             padding: 0;
             border-bottom: solid 1px rgb(226, 226, 226);
-            //padding: 2px;
-            .ql-formats{
-                margin-right: 0px;
-            }
         }
         .xm-color-picker-container {
             background: none;
             border: none;
             cursor: pointer;
             display: inline-block;
-            float: left;
             height: 24px;
             padding: 3px 5px;
             width: 28px;
         }
-        .ql-formats {
-            .docicon {
-                background: none;
-                border: none;
-                cursor: pointer;
-                display: inline-block;
-                float: left;
-                width: 28px;
-                color: #666666;
-                &.active {
-                    color: $primary-color;
-                }
-            }
-            .docicon-vertical {
-                display: inline-block;
-                float: left;
-                height: 24px;
-                padding: 5px 5px;
-                width: 28px;
+        .docicon {
+            background: none;
+            border: none;
+            cursor: pointer;
+            display: inline-block;
+            width: 28px;
+            color: #666666;
+            &.active {
+                color: $primary-color;
             }
         }
-    }
-    .common-header {
-        color: #444444;
+        .docicon-vertical {
+            display: inline-block;
+            height: 24px;
+            padding: 5px 5px;
+            width: 28px;
+        }
     }
     .toolbar-opver {
         padding-left: 30px !important;
-    }
-    .file-header {
-        .ql-pdf {
+        button{
             background: none;
-            border: 1px solid transparent;
+            border: none;
             cursor: pointer;
             display: inline-block;
-            float: left;
-            height: 25px;
-            line-height: 25px;
-            padding: 0px 5px;
-            .pdf-icon {
-                background-position: -160px -180px;
-            }
-        }
-        .ql-word {
-            background: none;
-            border: 1px solid transparent;
-            cursor: pointer;
-            display: inline-block;
-            float: left;
-            height: 25px;
-            line-height: 25px;
-            padding: 0px 5px;
-            .word-icon {
-                background-position: -240px -40px;
-            }
+            height: 24px;
+            padding: 3px 5px;
+            width: 28px;
+            outline: none;
         }
     }
     .opver-icon {
@@ -211,24 +180,6 @@
         &:hover {
             border: 1px solid #b6b6b6;
 
-        }
-    }
-    .view-header {
-        line-height: 24px;
-        height: 24px;
-        padding: 0;
-        .ql-catalogue {
-            background: none;
-            border: 1px solid transparent;
-            cursor: pointer;
-            display: inline-block;
-            float: left;
-            height: 24px;
-            line-height: 24px;
-            padding: 0px 5px;
-        }
-        .catalogue-icon {
-            background-position: -80px -180px;
         }
     }
 }
